force-app/main/default/objects/WC_WarrantyClaimSubmitted__e/WC_WarrantyClaimSubmitted__e.object-meta.xml
<CustomObject>
    <description>WC — Published after warranty claim intake for Slack and automation subscribers.</description>
    <label>WC Warranty Claim Submitted</label>
    <pluralLabel>WC Warranty Claim Submitted</pluralLabel>
</CustomObject>