force-app/main/default/objects/WC_WarrantyClaimSubmitted__e/fields/WC_Claim_Id__c.field-meta.xml
<CustomField>
    <fullName>WC_Claim_Id__c</fullName>
    <description>WC — Salesforce Claim Id.</description>
    <label>WC Claim Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>