force-app/main/default/objects/WC_WarrantyClaimSubmitted__e/fields/WC_Claim_Name__c.field-meta.xml
<CustomField>
    <fullName>WC_Claim_Name__c</fullName>
    <description>WC — Claim number / name.</description>
    <label>WC Claim Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>