force-app/main/default/objects/WC_WarrantyClaimSubmitted__e/fields/WC_Dealer_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>WC_Dealer_Account_Id__c</fullName>
    <description>WC — Dealer Account Id.</description>
    <label>WC Dealer Account Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>