force-app/main/default/objects/WC_WarrantyClaimSubmitted__e/fields/WC_Dealer_Name__c.field-meta.xml
<CustomField>
    <fullName>WC_Dealer_Name__c</fullName>
    <description>WC — Dealer display name for notifications.</description>
    <label>WC Dealer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>