force-app/main/default/objects/WC_WarrantyClaimSubmitted__e/fields/WC_Estimated_Value__c.field-meta.xml
<CustomField>
    <fullName>WC_Estimated_Value__c</fullName>
    <description>WC — Estimated claim value (numeric; same currency as org default).</description>
    <label>WC Estimated Value</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>