force-app/main/default/objects/WC_WarrantyClaimSubmitted__e/fields/WC_Recommended_Action__c.field-meta.xml
<CustomField>
    <fullName>WC_Recommended_Action__c</fullName>
    <description>WC — Approve / Reject / Review.</description>
    <label>WC Recommended Action</label>
    <length>20</length>
    <type>Text</type>
</CustomField>