force-app/main/default/objects/WC_WarrantyClaimSubmitted__e/fields/WC_Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>WC_Risk_Score__c</fullName>
    <description>WC — Risk score 0–100.</description>
    <label>WC Risk Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>