force-app/main/default/objects/WC_WarrantyClaimSubmitted__e/fields/WC_Submitted_At__c.field-meta.xml
<CustomField>
    <fullName>WC_Submitted_At__c</fullName>
    <description>WC — Submission timestamp.</description>
    <label>WC Submitted At</label>
    <type>DateTime</type>
</CustomField>