force-app/main/default/objects/WC_WarrantyClaimSubmitted__e/fields/WC_VIN__c.field-meta.xml
<CustomField>
    <fullName>WC_VIN__c</fullName>
    <description>WC — Vehicle identification number.</description>
    <label>WC VIN</label>
    <length>17</length>
    <type>Text</type>
</CustomField>